--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:contracts": "yarn workspace @clrfund/contracts run test",
     "test:web": "yarn workspace @clrfund/vue-app run test",
     "deploy:local": "yarn workspace @clrfund/contracts run deploy:local && yarn workspace @clrfund/contracts run deployTestRound:local",
+    "deploy:rinkeby": "yarn workspace @clrfund/contracts run deploy:rinkeby && yarn workspace @clrfund/contracts run deployTestRound:rinkeby",
     "upgrade:local": "yarn workspace @clrfund/contracts run upgrade:local",
     "lint": "yarn workspaces run lint",
     "lint:contracts": "yarn workspace @clrfund/contracts run lint",
