--- a/vue-app/.env.example
+++ b/vue-app/.env.example
@@ -19,7 +19,7 @@ VUE_APP_USER_REGISTRY_TYPE=simple
 # Learn more about BrightID and context in /docs/brightid.md
 VUE_APP_BRIGHTID_CONTEXT=clr.fund
 
-# Supported values: simple, optimistic, kleros
+# Supported values: simple, optimistic, pessimistic, kleros
 VUE_APP_RECIPIENT_REGISTRY_TYPE=simple
 
 VUE_APP_RECIPIENT_REGISTRY_POLICY=QmeygKjvrpidJeFHv6ywjUrj718nwtFQgCCPPR4r5nL87R
